--- a/AspNetCoreMVC-Ecommerce/AspNetCoreMVC-Ecommerce.csproj
+++ b/AspNetCoreMVC-Ecommerce/AspNetCoreMVC-Ecommerce.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,5 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>AspNetCoreMVC_Ecommerce</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+  </ItemGroup>
 
 </Project>
